--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,2 +1,9 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
+
 @import "base/base";
+@import "base/typography";
+
+@import "layouts/grid";
+@import "layouts/header";
+@import "layouts/navigation";
