Home page draft complete

--- a/client/src/sass/components/_paws.scss
+++ b/client/src/sass/components/_paws.scss
@@ -1,18 +1,11 @@
 .paws {
-  &__1 {
-  }
-  &__2 {
-  }
-  &__3 {
-  }
-  &__4 {
-  }
-  &__5 {
-  }
-  &__6 {
-  }
-  &__7 {
-  }
-  &__8 {
-  }
+  background-color: $color-white;
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 80rem;
+  right: 60rem;
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
 }
