--- a/client/src/sass/base/_typography.scss
+++ b/client/src/sass/base/_typography.scss
@@ -25,3 +25,36 @@
     letter-spacing: 1.75rem;
   }
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  // letter background gradient
+  //   background-image: linear-gradient(to right, $color-blue-light, $color-blue);
+  //   -webkit-background-clip: text;
+  color: $color-purple-dark;
+  letter-spacing: 2px;
+  transition: all 0.2s;
+  z-index: 100;
+
+  &:hover {
+    transform: scale(1.1);
+    text-shadow: 0.5rem 1rem rgba($color-black, 0.2);
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
