--- a/client/src/sass/layouts/_header.scss
+++ b/client/src/sass/layouts/_header.scss
@@ -1,13 +1,14 @@
 .header {
   height: 95vh;
-  //   background: linear-gradient(
-  //     right to bottom,
-  //     rgba($color-blue-light, 0.8),
-  //     rgba($color-blue, 0.8)
-  //   );
-  background: linear-gradient($color-blue-light, transparent);
-  background-color: $color-blue;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba($color-blue-light, 0.8),
+    rgba($color-blue, 0.8)
+  );
+  background-size: cover;
   position: relative;
+  // -webkit-clip-path: polygon(0 0, 100% 0%, 100% 85vh, 0 100%);
+  // clip-path: polygon(0 0, 100% 0%, 100% 85vh, 0 100%);
 
   &__text-box {
     position: absolute;
