--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -23,3 +23,12 @@ body {
   padding: 3rem;
   box-sizing: border-box;
 }
+
+.wrapper {
+  height: 90%;
+  // background-image: linear-gradient(
+  //   to right bottom,
+  //   rgba($color-blue, 0.8),
+  //   rgba($color-blue-dark, 0.8)
+  // );
+}
