--- a/client/src/sass/components/_feature-box.scss
+++ b/client/src/sass/components/_feature-box.scss
@@ -1,11 +1,13 @@
 .feature-box {
-  background-color: rgba($color-white, 0.8);
+  background-color: $color-white;
   font-size: 1.5rem;
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   transition: transform 0.3s;
+  z-index: 50;
+
   &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -18,6 +20,8 @@
   &:hover {
     transform: translateY(-1.5rem) scale(1.03);
   }
+
   &__text {
+    color: $color-purple;
   }
 }
