--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -2,7 +2,7 @@
   //   -webkit-clip-path: polygon(0 0, 80.3% 0, 0 25%);
   //   clip-path: polygon(0 0, 80.3% 0, 0 25%);
 
-  background-color: $color-white;
+  background-color: $color-grey-light-1;
   padding: 25rem 0;
   color: $color-purple-dark;
   margin-top: -5vh;
@@ -11,12 +11,9 @@
 .section-features {
   padding: 20rem 0;
   color: $color-purple-dark;
-  background-image: linear-gradient(
-    to right bottom,
-    rgba($color-blue-light, 0.8),
-    rgba($color-blue, 0.8)
-  );
   background-size: cover;
+  background-color: $color-blue-light;
+  position: relative;
   transition: all 0.3s;
   margin-top: -12rem;
 }
